# CME_practicum

SVM/: SVM.R
ann/: CMakeLists.txt  README.md  main.cpp
ann/supporting code/: dataReader.cpp  dataReader.h  line_plot.r  main.cpp  network_structure_plot.r  neuralNetwork.cpp  neuralNetwork.h  neuralNetworkTrainer.cpp  neuralNetworkTrainer.h
decision tree/: decision tree for 3 algo.py  graph histogram.py
